# NH-Rep

./: .gitmodules  README.md  environment.yml
IsoSurfaceGen/: README.md
code/conversion/: setup.conf  setup_all.conf
code/evaluation/: evaluation.py
code/evaluation/MeshFeatureSample/: CMakeLists.txt  Mesh3D.cpp  README.md  Tree.cpp  Tree.h  cxxopts.hpp  helper.cpp  helper.h
code/pre_processing/: README.md  gen_training_data_mesh.py  gen_training_data_yaml.py  load_obj.py  split_and_gen_fea.py
code/pre_processing/FeatureSample/: CMakeLists.txt  MaxFlow.cpp  Mesh3D.cpp  Source.cpp  Tree.cpp  helper.cpp  helper.h
code/pre_processing/ParametricSample/: CMakeLists.txt  Helper.h  Mesh3D.cpp  MyCurve.h  MySurf.h  main.cpp
code/pre_processing/raw_input/: 00000006_0.fea  00000006_0.yml  00007974_5.fea  00007974_5.yml
code/utils/: general.py
conversion/: convert_sdf.py  focalloss_test.py  mask_extend.py  plywrite.py  run.py  save_implicit_function_vtk.py  setup.conf  svm_test.py
data/eval_data/: broken_bullet_detectfea4e-3.ptangle
data/output_data/: eval_de_iou.py
evaluation/: all_names.txt  broken_bullet_name.txt  eval_distance.py  evaluation.py
evaluation/MeshFeatureSample/: .gitmodules  LICENSE  Mesh3D.h  MeshCheck.cpp  SimpleSample.cpp  Source.cpp  TinyVector.h  helper.cpp  helper.h
input_data/: broken_bullet_50k.xyz  broken_bullet_50k_csg.conf  broken_bullet_50k_mask.txt
model/: network.py  sample.py
output_data/: eval_de_iou.py
pre_processing/: CMakeLists.txt  README.md  gen_training_data_mesh.py  gen_training_data_yaml.py
pre_processing/FeatureSample/: CMakeLists.txt  MaxFlow.cpp  MaxFlow.h  Mesh3D.h  Source.cpp  TinyVector.h  Tree.cpp  Tree.h  helper.cpp  helper.h
pre_processing/ParametricSample/: CMakeLists.txt  Helper.cpp  Helper.h  main.cpp  nanoflann.hpp
utils/: plots.py
